feat: add unique word form counter

--- a/src/morphological_analysis.ipynb
+++ b/src/morphological_analysis.ipynb
@@ -17,12 +17,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5faac5d",
+   "cell_type": "markdown",
+   "id": "df68c1ca",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[(የ,በ,ከ,ስለ)+[[ግድል+(ያ)]+(ም,ስ,ን)]]\n",
     "[[(የ,በ,ከ,ስለ)+[ግድል+(ያ)+(ዬ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)]+(ም,ስ)]]\n",
     "[(የ)+ግድል+(ያ)+(ዬ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)+(ን)]"
@@ -37,12 +36,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "523e9766",
+   "cell_type": "markdown",
+   "id": "93db2fea",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[(የ,በ,ከ,ስለ)+[[ገዳል+(ይ)]+(ም,ስ,ን)]]\n",
     "[[(የ,በ,ከ,ስለ)+[ገዳል+(ይ)+(ዬ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ም,ስ)]]\n",
     "[(የ)+ገዳል+(ይ)+(ዬ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)+(ን)]\n",
@@ -61,12 +59,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "490b0d02",
+   "cell_type": "markdown",
+   "id": "47286fed",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[[ገድል+(ዬ)]+(አለሁ)]\n",
     "[[ገድል+(ኧን,ኧህ,ኧሽ,አችሁ,ኦ,ኧው)]+(አል)]\n",
     "[[ገድል+(አ)]+(አለች)]\n",
@@ -156,12 +153,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bdb2cd6",
+   "cell_type": "markdown",
+   "id": "af60bfd9",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[[(መ,አለመ)+ገደል]+(ን,ም,ስ)]\n",
     "[[(መ,አለመ)+ገደል+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ን,ም,ስ)]\n",
     "[(መ,አለመ)+ገደል+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)+(ን)+(ም,ስ)]\n",
@@ -220,12 +216,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf570e4a",
+   "cell_type": "markdown",
+   "id": "572136c5",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[(አት)+[[ግደል+(ይ)]+(ኝ,ን,ው,አት,አቸው)]]\n",
     "[(አት)+[[ግደል+(ኡ)]+(ኝ,ን,ው,አት,አቸው)]]\n",
     "[(አ)+[[(ል,እን)+ግደል]+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]]\n",
@@ -245,12 +240,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ab98df1",
+   "cell_type": "markdown",
+   "id": "89b57041",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[[(ሳ,ሳላ,ባ,ባላ)+ጋድል]+(ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
     "[[(ስና,ሳና,ብና,ባና)+ጋድል]+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]\n",
     "[[(ስታ,ሳታ,ብታ,ባታ)+ጋድል]+(ኧኝ,ኧን,ኧው,አት,አቸው)]\n",
@@ -287,12 +281,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "beea2283",
+   "cell_type": "markdown",
+   "id": "67924c22",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[[(ተ,አ)+ጋደል+(ኩ)]+(ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
     "[[(ተ,አ)+ጋደል+(ን)]+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]\n",
     "[[(ተ,አ)+ጋደል+(ክ)]+(ኧኝ,ኧን,ኧው,አት,አቸው)]\n",
@@ -348,12 +341,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3c3cdb9",
+   "cell_type": "markdown",
+   "id": "6a39a8bb",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[[[(አ,መ,አለመ)+ገዳደል]+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ን)]\n",
     "[[[(በ,የ,ከ,ስለ)+(አ,መ,አለመ)+ገዳደል]+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ን)]\n",
     "\n",
@@ -414,12 +406,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e8b2707",
+   "cell_type": "markdown",
+   "id": "5b110ead",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "[[ገዳድል+(ዬ)]+(ም,ስ)]\n",
     "[[ገዳድል+(ኧን)]+(ም,ስ)]\n",
     "[[ገዳድል+(ኧህ)]+(ም,ስ)]\n",
@@ -447,14 +438,401 @@
     "[[(ተ,አ)+ገዳድል+(አ)]+(ም,ስ)]\n",
     "[[(ተ,አ)+ገዳድል+(ኧው)]+(ም,ስ)]\n",
     "\n",
-    "[[(ተ,አ)+ገዳድል+(ዬ)+(ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
-    "[[(ተ,አ)+ገዳድል+(ኧን)+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም,ስ)]\n",
-    "[[(ተ,አ)+ገዳድል+(ኧህ)+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(ም,ስ)]\n",
-    "[[(ተ,አ)+ገዳድል+(ኧሽ)+(ኝ,ን,ው,አት,አቸው)]+(ም,ስ)]\n",
-    "[[(ተ,አ)+ገዳድል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)]+(ም,ስ)]\n",
-    "[[(ተ,አ)+ገዳድል+(ኦ)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]\n",
-    "[[(ተ,አ)+ገዳድል+(አ)+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
-    "[[(ተ,አ)+ገዳድል+(ኧው)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]"
+    "[[(አ)+ገዳድል+(ዬ)+(ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኧን)+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኧህ)+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኧሽ)+(ኝ,ን,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኦ)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(አ)+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኧው)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73ae0ef7",
+   "metadata": {},
+   "source": [
+    "### Total Counted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "45b128ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total unique word forms: 4175\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "raw_patterns=\"\"\"\n",
+    "[(የ,በ,ከ,ስለ)+[[ግድል+(ያ)]+(ም,ስ,ን)]]\n",
+    "[[(የ,በ,ከ,ስለ)+[ግድል+(ያ)+(ዬ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)]+(ም,ስ)]]\n",
+    "[(የ)+ግድል+(ያ)+(ዬ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)+(ን)]\n",
+    "\n",
+    "[(የ,በ,ከ,ስለ)+[[ገዳል+(ይ)]+(ም,ስ,ን)]]\n",
+    "[[(የ,በ,ከ,ስለ)+[ገዳል+(ይ)+(ዬ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ም,ስ)]]\n",
+    "[(የ)+ገዳል+(ይ)+(ዬ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)+(ን)]\n",
+    "\n",
+    "[(የ,በ,ከ,ስለ)+[[(ተ)+ገዳል+(ይ)]+(ም,ስ,ን)]]\n",
+    "[[(የ,በ,ከ,ስለ)+[(ተ)+ገዳል+(ይ)+(ዬ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ም,ስ)]]\n",
+    "[(የ)+(ተ)+ገዳል+(ይ)+(ዬ,አችን,ህ,ሽ,አችሁ,ው,ዋ,አቸው)+(ን)]\n",
+    "\n",
+    "[[ገድል+(ዬ)]+(አለሁ)]\n",
+    "[[ገድል+(ኧን,ኧህ,ኧሽ,አችሁ,ኦ,ኧው)]+(አል)]\n",
+    "[[ገድል+(አ)]+(አለች)]\n",
+    "\n",
+    "[[ገድል+(ዬ)+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(አለሁ)]\n",
+    "[[ገድል+(ኧን)+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(አል)]\n",
+    "[[ገድል+(ኧህ)+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(አል)]\n",
+    "[[ገድል+(ኧሽ)+(ኝ,ን,ው,አት,አቸው)]+(አል)]\n",
+    "[[ገድል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)]+(አል)]\n",
+    "[[ገድል+(ኦ,ኧው)+(ኝ,ን,ህ,ሽ,አችሁ,ት,አት,አቸው)]+(አል)]\n",
+    "[[ገድል+(አ)+(ኝ,ን,ህ,ሽ,አችሁ,ው,ት,አቸው)]+(አለች)]\n",
+    "\n",
+    "[[(አስ)+[ገድል+(ዬ)]+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(አለሁ)]\n",
+    "[[(አስ)+[ገድል+(ኧን)]+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(አል)]\n",
+    "[[(አስ)+[ገድል+(ኧህ)]+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(አል)]\n",
+    "[[(አስ)+[ገድል+(ኧሽ)]+(ኝ,ን,ው,አት,አቸው)]+(አል)]\n",
+    "[[(አስ)+[ገድል+(አችሁ)]+(ኝ,ን,ት,አት,አቸው)]+(አል)]\n",
+    "[[(አስ)+[ገድል+(ኦ,ኧው)]+(ኝ,ን,ህ,ሽ,አችሁ,ት,አት,አቸው)]+(አል)]\n",
+    "[[(አስ)+[ገድል+(አ)]+(ኝ,ን,ህ,ሽ,አችሁ,ው,ት,አቸው)]+(አለች)]\n",
+    "\n",
+    "[[[(ስ,ስን,ሳል,ሳን,ብ,ብን,ባል,ባን)+ገድል]+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም)]\n",
+    "[[[(ሲ,ስት,ሳይ,ሳት,ቢ,ብት,ባይ,ባት)+ገድል]+(ኧኝ,ኧን,ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም)]\n",
+    "[[[(ሲ,ሳይ,ቢ,ባይ)+ገድል+(ኡ)]+(ህ,ሽ,አችሁ)]+(ም)]\n",
+    "[[[(ሲ,ስት,ሳይ,ሳት,ቢ,ባ,ባት)+ገድል+(ኡ)]+(ኝ,ን,ት,አት,አቸው)]+(ም)]\n",
+    "[[[(ስት,ሳት,ብት,ባት)+ገድል+(ይ)]+(ኝ,ን,ው,አት,አቸው)]+(ም)]\n",
+    "\n",
+    "[[[(ስ,ስን,ሳል,ሳን,ብ,ብን,ባል,ባን)+(አስ)+ገድል]+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም)]\n",
+    "[[[(ሲ,ስት,ሳይ,ሳት,ቢ,ብት,ባይ,ባት)+(አስ)+ገድል]+(ኧኝ,ኧን,ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም)]\n",
+    "[[[(ሲ,ሳይ,ቢ,ባይ)+(አስ)+ገድል+(ኡ)]+(ህ,ሽ,አችሁ)]+(ም)]\n",
+    "[[[(ሲ,ስት,ሳይ,ሳት,ቢ,ባ,ባት)+(አስ)+ገድል+(ኡ)]+(ኝ,ን,ት,አት,አቸው)]+(ም)]\n",
+    "[[[(ስት,ሳት,ብት,ባት)+(አስ)+ገድል+(ይ)]+(ኝ,ን,ው,አት,አቸው)]+(ም)]\n",
+    "\n",
+    "[(እ)+ገድል+(አለሁ)]\n",
+    "[(እን)+ገድል+(አለን)]\n",
+    "[(ት)+ገድል+(አለህ)]\n",
+    "[(ት)+ገድል+(ይ)+(አለሽ)]\n",
+    "[(ት)+ገድል+(አላችሁ)]\n",
+    "[(ይ)+ገድል+(አል)]\n",
+    "[(ት)+ገድል+(አለች)]\n",
+    "[(ይ)+ገድል+(አል)+(ኡ)]\n",
+    "\n",
+    "[[[(እ)+ገድል]+(አችሁ,ህ,ሽ,ኧው,አት,አቸው)]+(አለሁ)]\n",
+    "[[[(እን)+ገድል]+(አችሁ,ህ,ሽ,ኧው,አት,አቸው)]+(አለን)]\n",
+    "[[[(ት)+ገድል]+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(አለህ)]\n",
+    "[[[(ት)+ገድል+(ይ)]+(ኝ,ን,ው,አት,አቸው)]+(አለሽ)]\n",
+    "[[[(ት)+ገድል+(ኡ)]+(ኝ,ን,ት,አት,አቸው)]+(አላችሁ)]\n",
+    "[[[(ይ)+ገድል]+(ኧኝ,ኧን,ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(አል)]\n",
+    "[[[(ት)+ገድል]+(ኧኝ,ኧን,ህ,ሽ,አችሁ,ኧው,አት,አቸው)]+(አለች)]\n",
+    "[[[(ይ)+ገድል+(ኡ)]+(ኝ,ን,ህ,ሽ,አችሁ,ኡት,አት,አቸው)]+(አል)]\n",
+    "\n",
+    "[[(አል,አን,አት,አይ)+ገድል]+(ም)]\n",
+    "[[(አይ,አት)+ገድል+(ኡ)]+(ም)]\n",
+    "[[(አት)+ገድል+(ይ)]+(ም)]\n",
+    "\n",
+    "[(አል,አን,አት,አይ)+(አስ)+ገድል+(ም)]\n",
+    "[(አት,አይ)+(አስ)+ገድል+(ኡ)+(ም)]\n",
+    "[(አት)+(አስ)+ገድል+(ይ)+(ም)]\n",
+    "\n",
+    "[((አል,አን,አት,አይ)+(አስ),(አል,አን,አት,አይ))+ገድል+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)+(ም)]\n",
+    "[((አት,አይ)+(አስ),(አት,አይ))+ገድል+(ኧኝ,ኧን)+(ም)]\n",
+    "[((አይ)+(አስ),(አይ))+ገድል+(ኡ)+(ህ,ሽ,አችሁ)+(ም)]\n",
+    "[(አይ,አት)+ገድል+(ኡ)+(ኝ,ን,ት,አት,አቸው)+(ም)]\n",
+    "[(አት)+ገድል+(ይ)+(ኝ,ን,ው,አት,አቸው)+(ም)]\n",
+    "\n",
+    "[(አል,አን,አት,አይ)+(አስ)+ገድል+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)+(ም)]\n",
+    "[(አት,አይ)+(አስ)+ገድል+(ኧኝ,ኧን)+(ም)]\n",
+    "[(አይ)+(አስ)+ገድል+(ኡ)+(ህ,ሽ,አችሁ)+(ም)]\n",
+    "[(አይ,አት)+(አስ)+ገድል+(ኡ)+(ኝ,ን,ት,አት,አቸው)+(ም)]\n",
+    "[(አት)+(አስ)+ገድል+(ይ)+(ኝ,ን,ው,አት,አቸው)+(ም)]\n",
+    "\n",
+    "[[(ተ)+ገድል+(ዬ)]+(አለሁ)]\n",
+    "[[(ተ)+ገድል+(አ)]+(አለች)]\n",
+    "[[(ተ)+ገድል+(ኧን,ኧህ,ኧሽ,አችሁ,ኦ,ኧው)]+(አል)]\n",
+    "\n",
+    "[[((እንዳል,እንዳን)+(አስ),(እንዳል,እንዳን))+ገድል]+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]\n",
+    "[[((እንዳት,እንዳይ)+(አስ),(እንዳት,እንዳይ))+ገድል]+(ኧኝ,ኧን,ኧው,አት,አቸው)]\n",
+    "[[((እንዳት)+(አስ),(እንዳት))+ገድል+(ይ)]+(ኝ,ን,ው,አት,አቸው)]\n",
+    "[[((እንዳት,እንዳይ)+(አስ),(እንዳት,እንዳይ))+ገድል+(ኡ)]+(ኝ,ን,ት,አት,አቸው)]\n",
+    "\n",
+    "[[(መ,አለመ)+ገደል]+(ን,ም,ስ)]\n",
+    "[[(መ,አለመ)+ገደል+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ን,ም,ስ)]\n",
+    "[(መ,አለመ)+ገደል+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)+(ን)+(ም,ስ)]\n",
+    "[[(መ,አለመ)+(አስ)+ገደል]+(ን,ም,ስ)]\n",
+    "[[(መ,አለመ)+(አስ)+ገደል+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ን,ም,ስ)]\n",
+    "[(መ,አለመ)+(አስ)+ገደል+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)+(ን)+(ም,ስ)]\n",
+    "\n",
+    "[[(ከ)+(መ,አለመ)+ገደል]+(ም,ስ)]\n",
+    "[[(ከ)+(መ,አለመ)+(አስ)+ገደል]+(ም,ስ)]\n",
+    "\n",
+    "[(እ)+ገደል+(አለሁ)]\n",
+    "[(እን)+ገደል+(አለን)]\n",
+    "[(ት)+ገደል+(አለህ)]\n",
+    "[(ት)+ገደል+(ይ)+(አለሽ)]\n",
+    "[(ት)+ገደል+(አላችሁ)]\n",
+    "[(ይ)+ገደል+(አል)]\n",
+    "[(ት)+ገደል+(አለች)]\n",
+    "[(ይ)+ገደል+(አሉ)]\n",
+    "\n",
+    "[[(አል,አን,አይ,አት)+ገደል]+(ም)]\n",
+    "[[(ይ,ተ,አይ,አት)+ገደል+(ኡ)]+(ም)]\n",
+    "[[(ተ,አት)+ገደል+(ይ)]+(ም)]\n",
+    "[(አል,አልተ)+ገደል+(ኩም,ንም,ክም,ሽም,አችሁም,ኧም,ኧችም,ኡም)]\n",
+    "\n",
+    "[(ሳል,ሳን,ሳይ,ሳት)+ገደል]\n",
+    "[(ሳት)+ገደል+(ይ)]\n",
+    "[(ሳት,ሳይ)+ገደል+(ኡ)]\n",
+    "\n",
+    "[[[(እየ,ከ,ስለ)+[ገደል+(ኩ)]]+(ህ,ሽ,ት,አት,አቸው)]+(ም)]\n",
+    "[[[(እየ,ከ,ስለ)+[ገደል+(ን)]]+(ህ,ሽ,ኧው,አት,አቸው)]+(ም)]\n",
+    "[[[(እየ,ከ,ስለ)+[ገደል+(ክ)]]+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(ም)]\n",
+    "[[[(እየ,ከ,ስለ)+[ገደል+(ሽ)]]+(ኝ,ን,ው,አት,አቸው)]+(ም)]\n",
+    "[[[(እየ,ከ,ስለ)+[ገደል+(አችሁ)]]+(ኝ,ን,ት,አት,አቸው)]+(ም)]\n",
+    "[[[(እየ,ከ,ስለ)+[ገደል+(ኧ,ኧች)]]+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም)]\n",
+    "[[[(እየ,ከ,ስለ)+[ገደል+(ኡ)]]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም)]\n",
+    "\n",
+    "[[[(ከ,ስለ)+(አል)+ገደል+(ኩ)]+(ህ,ሽ,ት,አት,አቸው)]+(ም)]\n",
+    "[[[(ከ,ስለ)+(አል)+ገደል+(ን)]+(ህ,ሽ,ኧው,አት,አቸው)]+(ም)]\n",
+    "[[[(ከ,ስለ)+(አል)+ገደል+(ክ)]+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(ም)]\n",
+    "[[[(ከ,ስለ)+(አል)+ገደል+(ሽ)]+(ኝ,ን,ው,አት,አቸው)]+(ም)]\n",
+    "[[[(ከ,ስለ)+(አል)+ገደል+(አችሁ)]+(ኝ,ን,ት,አት,አቸው)]+(ም)]\n",
+    "[[[(ከ,ስለ)+(አል)+ገደል+(ኧ,ኧች)]+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም)]\n",
+    "[[[(ከ,ስለ)+(አል)+ገደል+(ኡ)]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም)]\n",
+    "\n",
+    "[[(እየ,ከ,ስለ)+[(ተ)+ገደል+(ኩ,ን,ክ,ሽ,አችሁ,ኧ,ኧች,ኡ)]]+(ም)]\n",
+    "[(ከ,ስለ)+[(አል)+(ተ)+ገደል+(ኩ,ን,ክ,ሽ,አችሁ,ኧ,ኧች,ኡ)+(ም)]]\n",
+    "[(ከ,ስለ)+(አል)+(ተ)+ገደል+(ኩ,ን,ክ,ሽ,አችሁ,ኧ,ኧች,ኡ)]\n",
+    "\n",
+    "[(አት)+[[ግደል+(ይ)]+(ኝ,ን,ው,አት,አቸው)]]\n",
+    "[(አት)+[[ግደል+(ኡ)]+(ኝ,ን,ው,አት,አቸው)]]\n",
+    "[(አ)+[[(ል,እን)+ግደል]+(ህ,ሽ,አችሁ,ኧው,አት,አቸው)]]\n",
+    "[(አ)+[[(ይ,ት)+ግደል]+(ኧኝ,ኧን,ህ,ሽ,አችሁ,ኧው,አት,አቸው)]]\n",
+    "[(አ)+[[(ይ)+ግደል+(ኡ)]+(ኝ,ን,ው,አት,አቸው)]]\n",
+    "\n",
+    "[[[(መ,አለመ)+(ግደል)]+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ን)]\n",
+    "[[(ከ,የ,ስለ)+(መ,አለመ)+(ግደል,ገደል)]+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]\n",
+    "\n",
+    "[[(ሳ,ሳላ,ባ,ባላ)+ጋድል]+(ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
+    "[[(ስና,ሳና,ብና,ባና)+ጋድል]+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]\n",
+    "[[(ስታ,ሳታ,ብታ,ባታ)+ጋድል]+(ኧኝ,ኧን,ኧው,አት,አቸው)]\n",
+    "[[(ስታ,ሳታ,ብታ,ባታ)+ጋድል+(ይ)]+(ኝ,ን,ው,አት,አቸው)]\n",
+    "[[(ስታ,ሳታ,ብታ,ባታ)+ጋድል+(ኡ)]+(ኝ,ን,ት,አት,አቸው)]\n",
+    "[[(ሲያ,ሳያ,ቢያ,ባያ)+ጋድል]+(ኧኝ,ኧን,ክ,ሽ,አችሁ,ኧው,አት,አቸው)]\n",
+    "[[(ሲያ,ሳያ,ቢያ,ባያ)+ጋድል+(ኡ)]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]\n",
+    "\n",
+    "[[(ተ,አ)+ጋድል+(ዬ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኧን)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኧህ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኧሽ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(አችሁ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኦ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(አ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኧው)]+(ም,ስ)]\n",
+    "\n",
+    "[[(ተ,አ)+ጋድል+(ዬ)+(ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኧን)+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኧህ)+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኧሽ)+(ኝ,ን,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኦ)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(አ)+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ጋድል+(ኧው)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "\n",
+    "[[(ተ,አ)+ጋደል+(ኩ)]+(ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
+    "[[(ተ,አ)+ጋደል+(ን)]+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]\n",
+    "[[(ተ,አ)+ጋደል+(ክ)]+(ኧኝ,ኧን,ኧው,አት,አቸው)]\n",
+    "[[(ተ,አ)+ጋደል+(ሽ)]+(ኝ,ን,ው,አት,አቸው)]\n",
+    "[[(ተ,አ)+ጋደል+(አችሁ)]+(ኝ,ን,ት,አት,አቸው)]\n",
+    "[[(ተ,አ)+ጋደል+(ኧ)]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]\n",
+    "[[(ተ,አ)+ጋደል+(ኧች)]+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
+    "[[(ተ,አ)+ጋደል+(ኡ)]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]\n",
+    "\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ኩ)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ን)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ክ)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ሽ)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(አችሁ)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ኧ)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ኧች)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ኡ)+(ም)]\n",
+    "\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ኩ)+(ክ,ሽ,አችሁ,ው,አት,አቸው)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ን)+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ክ)+(ኧኝ,ኧን,ኧው,አት,አቸው)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ሽ)+(ኝ,ን,ው,አት,አቸው)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ኧ)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ኧች)+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)+(ም)]\n",
+    "[(አል)+(ተ,አ)+ጋደል+(ኡ)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)+(ም)]\n",
+    "\n",
+    "[[(ስለ,የ,በ,ከ)+(ተ,አ)+ጋደል+(ኩ)]+(ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(ተ,አ)+ጋደል+(ን)]+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(ተ,አ)+ጋደል+(ክ)]+(ኧኝ,ኧን,ኧው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(ተ,አ)+ጋደል+(ሽ)]+(ኝ,ን,ው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(ተ,አ)+ጋደል+(አችሁ)]+(ኝ,ን,ት,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(ተ,አ)+ጋደል+(ኧ)]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(ተ,አ)+ጋደል+(ኧች)]+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(ተ,አ)+ጋደል+(ኡ)]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]\n",
+    "\n",
+    "[[(ስለ,የ,በ,ከ)+(አል)+(ተ,አ)+ጋደል+(ኩ)]+(ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(አል)+(ተ,አ)+ጋደል+(ን)]+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(አል)+(ተ,አ)+ጋደል+(ክ)]+(ኧኝ,ኧን,ኧው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(አል)+(ተ,አ)+ጋደል+(ሽ)]+(ኝ,ን,ው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(አል)+(ተ,አ)+ጋደል+(አችሁ)]+(ኝ,ን,ት,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(አል)+(ተ,አ)+ጋደል+(ኧ)]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(አል)+(ተ,አ)+ጋደል+(ኧች)]+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]\n",
+    "[[(ስለ,የ,በ,ከ)+(አል)+(ተ,አ)+ጋደል+(ኡ)]+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]\n",
+    "\n",
+    "[[[(አ,መ,አለመ)+ገዳደል]+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ን)]\n",
+    "[[[(በ,የ,ከ,ስለ)+(አ,መ,አለመ)+ገዳደል]+(ኤ,አችን,ህ,ሽ,አችሁ,ኡ,ኋ,አቸው)]+(ን)]\n",
+    "\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኩ)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ን)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ክ)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ሽ)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(አችሁ)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኧ)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኧች)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኡ)]]\n",
+    "\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኩ)+(ም)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ን)+(ም)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ክ)+(ም)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ሽ)+(ም)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(አችሁ)+(ም)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኧ)+(ም)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኧች)+(ም)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኡ)+(ም)]]\n",
+    "\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኩ)+(ህ,ሽ,አችሁ,ት,አት,አቸው)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ን)+(ህ,ሽ,አችሁ,ት,አት,አቸው)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ክ)+(ኧኝ,ኧን,ኧው,አት,አቸው)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ሽ)+(ኝ,ን,ው,አት,አቸው)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኧ)+(ኝ,ን,ህ,ሽ,ው,አት,አቸው)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኧች)+(ኝ,ን,ህ,ሽ,ው,አት,አቸው)]]\n",
+    "[(እየ,በ,ከ,ስለ)+[ገዳደል+(ኡ)+(ኝ,ን,ህ,ሽ,ት,አት,አቸው)]]\n",
+    "\n",
+    "[(እየ,ከ,ስለ)+[ገዳደል+(ኩ)+(ህ,ሽ,አችሁ,ት,አት,አቸው)+(ም)]]\n",
+    "[(እየ,ከ,ስለ)+[ገዳደል+(ን)+(ህ,ሽ,አችሁ,ት,አት,አቸው)+(ም)]]\n",
+    "[(እየ,ከ,ስለ)+[ገዳደል+(ክ)+(ኧኝ,ኧን,ኧው,አት,አቸው)+(ም)]]\n",
+    "[(እየ,ከ,ስለ)+[ገዳደል+(ሽ)+(ኝ,ን,ው,አት,አቸው)+(ም)]]\n",
+    "[(እየ,ከ,ስለ)+[ገዳደል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)+(ም)]]\n",
+    "[(እየ,ከ,ስለ)+[ገዳደል+(ኧ)+(ኝ,ን,ህ,ሽ,ው,አት,አቸው)+(ም)]]\n",
+    "[(እየ,ከ,ስለ)+[ገዳደል+(ኧች)+(ኝ,ን,ህ,ሽ,ው,አት,አቸው)+(ም)]]\n",
+    "[(እየ,ከ,ስለ)+[ገዳደል+(ኡ)+(ኝ,ን,ህ,ሽ,ት,አት,አቸው)+(ም)]]\n",
+    "\n",
+    "[(እየ,በ,ከ,ስለ)+[(ተ)+ገዳደል+(ኩ,ን,ክ,ሽ,አችሁ,ኧ,ኧች,ኡ)]]\n",
+    "\n",
+    "[[[(የ,ያ,የ+(አስ))+ገዳደል+(ኩ)]+(ህ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ን)]\n",
+    "[[[(የ,ያ,የ+(አስ))+ገዳደል+(ን)]+(ህ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ን)]\n",
+    "[[[(የ,ያ,የ+(አስ))+ገዳደል+(ክ)]+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(ም,ን)]\n",
+    "[[[(የ,ያ,የ+(አስ))+ገዳደል+(ሽ)]+(ኝ,ን,ው,አት,አቸው)]+(ም,ን)]\n",
+    "[[[(የ,ያ,የ+(አስ))+ገዳደል+(አችሁ)]+(ኝ,ን,ት,አት,አቸው)]+(ም,ን)]\n",
+    "[[[(የ,ያ,የ+(አስ))+ገዳደል+(ኧ)]+(ኝ,ን,ህ,ሽ,ው,አት,አቸው)]+(ም,ን)]\n",
+    "[[[(የ,ያ,የ+(አስ))+ገዳደል+(ኧች)]+(ኝ,ን,ህ,ሽ,ው,አት,አቸው)]+(ም,ን)]\n",
+    "[[[(የ,ያ,የ+(አስ))+ገዳደል+(ኡ)]+(ኝ,ን,ህ,ሽ,ት,አት,አቸው)]+(ም,ን)]\n",
+    "\n",
+    "[[ገዳድል+(ዬ)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኧን)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኧህ)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኧሽ)]+(ም,ስ)]\n",
+    "[[ገዳድል+(አችሁ)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኦ)]+(ም,ስ)]\n",
+    "[[ገዳድል+(አ)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኧው)]+(ም,ስ)]\n",
+    "\n",
+    "[[ገዳድል+(ዬ)+(ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኧን)+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኧህ)+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኧሽ)+(ኝ,ን,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[ገዳድል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኦ)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "[[ገዳድል+(አ)+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[ገዳድል+(ኧው)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "\n",
+    "[[(ተ,አ)+ገዳድል+(ዬ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ገዳድል+(ኧን)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ገዳድል+(ኧህ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ገዳድል+(ኧሽ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ገዳድል+(አችሁ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ገዳድል+(ኦ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ገዳድል+(አ)]+(ም,ስ)]\n",
+    "[[(ተ,አ)+ገዳድል+(ኧው)]+(ም,ስ)]\n",
+    "\n",
+    "[[(አ)+ገዳድል+(ዬ)+(ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኧን)+(ክ,ሽ,አችሁ,ኧው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኧህ)+(ኧኝ,ኧን,ኧው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኧሽ)+(ኝ,ን,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(አችሁ)+(ኝ,ን,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኦ)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(አ)+(ኝ,ን,ክ,ሽ,አችሁ,ው,አት,አቸው)]+(ም,ስ)]\n",
+    "[[(አ)+ገዳድል+(ኧው)+(ኝ,ን,ክ,ሽ,አችሁ,ት,አት,አቸው)]+(ም,ስ)]\n",
+    "\"\"\"\n",
+    "\n",
+    "# Helper to parse segments from a single pattern\n",
+    "def parse_segments(s):\n",
+    "    segments = []\n",
+    "    i = 0\n",
+    "    while i < len(s):\n",
+    "        if s[i] == '(':\n",
+    "            level = 1\n",
+    "            j = i + 1\n",
+    "            while j < len(s) and level:\n",
+    "                if s[j] == '(':\n",
+    "                    level += 1\n",
+    "                elif s[j] == ')':\n",
+    "                    level -= 1\n",
+    "                j += 1\n",
+    "            segments.append(s[i:j])\n",
+    "            i = j\n",
+    "        elif s[i] == '+':\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            j = i\n",
+    "            while j < len(s) and s[j] not in '(+':\n",
+    "                j += 1\n",
+    "            segments.append(s[i:j])\n",
+    "            i = j\n",
+    "    return segments\n",
+    "\n",
+    "# Build the full set of expansions\n",
+    "all_forms = set()\n",
+    "\n",
+    "for line in raw_patterns.splitlines():\n",
+    "    line = line.strip()\n",
+    "    if not line:\n",
+    "        continue\n",
+    "    # strip outer square brackets\n",
+    "    if line.startswith('[') and line.endswith(']'):\n",
+    "        line = line[1:-1]\n",
+    "    segs = parse_segments(line)\n",
+    "    # Build list of lists of options\n",
+    "    options = []\n",
+    "    for seg in segs:\n",
+    "        seg = seg.strip()\n",
+    "        if seg.startswith('(') and seg.endswith(')'):\n",
+    "            opts = [opt.strip() for opt in seg[1:-1].split(',') if opt.strip()]\n",
+    "        else:\n",
+    "            opts = [seg]\n",
+    "        options.append(opts)\n",
+    "    # Cartesian product\n",
+    "    for combo in itertools.product(*options):\n",
+    "        form = ''.join(combo)\n",
+    "        all_forms.add(form)\n",
+    "\n",
+    "# Output count\n",
+    "print(\"Total unique word forms:\", len(all_forms))"
    ]
   }
  ],
